# sway-wallmanager

./: .gitignore  CMakeLists.txt  README.md
cmake/: deps.cmake
src/: main.cc
src/ui/: CMakeLists.txt  main.cc
src/ui/app/: Application.cc  Application.h  ApplicationManager.cc  ApplicationManager.h
src/ui/components/: App.cc  App.h
src/ui/services/: ConfigService.cc  ConfigService.h  FileService.cc  FileService.h
src/ui/states/: DirectoryState.h
src/wallmanagerd/: CMakeLists.txt  main.cc
src/wallmanagerd/managers/: ConfigManager.cc  ConfigManager.h  DaemonManager.cc  DaemonManager.h
src/wallmanagerd/sway/: wallpaper.h
